Closed Bug 1286170 Opened 10 years ago Closed 9 years ago

Fix SourceBufferIterator's move-assignment operator

Categories

(Core :: Graphics: ImageLib, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: seth, Assigned: seth)

References

Details

Attachments

(1 file)

I noticed while working on bug 1286161 that SourceBufferIterator's move-assignment operator is implemented wrong. It needs to let the previous owning SourceBuffer know that it's going away before it takes possession of the owner reference of the SourceBufferIterator that's being moved from. Otherwise the owning SourceBuffer never realizes that a reference to it has been dropped.
Here's the patch. We just do the same thing we do in the destructor.
Attachment #8770034 - Flags: review?(edwin)
Pushed by mfowler@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/8033580f6a1d Handle move-assignment of SourceBufferIterators correctly. r=edwin
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: