Bug 1286170 - Handle move-assignment of SourceBufferIterators correctly. r=edwin